# mython

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflow/: pytest.yml
mython/: mython
mython/util/: __init__.py  bye.py  hello.py
src/mython/: __init__.py  fizzbuzz.py  grepy.py  hello.py  main.py
tests/: test_fizzbuzz.py  test_grepy.py
