[project]
name = "mython"
version = "0.2.2"
description = "Personal python package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mython = "mython.main:main"
grepy = "mython.grepy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.8.6",
]
